@@ -8,7 +8,7 @@ http://www.tuxpaint.org/
 
 $Id$
 
-2010.December.15 (0.9.22)
+2010.December.17 (0.9.22)
   * New Tools:
     ----------
     * Label - A tool to add text to a drawing, which can be modified or
@@ -50,10 +50,17 @@ $Id$
 
   * Other Improvements:
     -------------------
+    * Tux Paint (in windowed mode) now only centers itself if
+      no specific positioning has been provided via
+      the SDL_VIDEO_WINDOW_POS environment variable.
+      (SourceForge Bug #3138446)
+
     * Adding a mouse mode to avoid the need to drag the mouse.
+      FIXME: Explain
       by Ankit Choudary <ankit.goaldecided@gmail.com>
 
     * Allowing to paint with the keyboard.
+      FIXME: Explain
       by Ankit Choudary.
 
     * Creating thumbnails for the starters we provide.
